# ModernDashboard

./: .gitignore  BUILD-MACOS.md  CLAUDE.md  CMakeLists.txt  CRUSH.md  GEMINI.md  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  README.md  TECHNICAL_PLAN.md  build-macos-with-mock.sh  build-macos.sh  build-native-macos.sh  build_backend.sh  debug-ffi.sh  run_with_native_backend.sh  setup_macos.sh  test_ffi_connection.sh  verify_dependencies.sh
.github/workflows/: build.yml
cpp_backend/include/: ffi_interface.h
cpp_backend/include/core/: dashboard_engine.h  widget_interface.h  widget_manager.h
cpp_backend/include/services/: mail_service.h  news_service.h  stream_service.h  todo_service.h  weather_service.h
cpp_backend/src/: ffi_interface.cpp  main.cpp
cpp_backend/src/core/: dashboard_engine.cpp  widget_manager.cpp
cpp_backend/src/services/: mail_service.cpp  news_service.cpp  stream_service.cpp  todo_service.cpp  weather_service.cpp
flutter_frontend/: .metadata  README.md  firebase.json  pubspec.yaml  todos.db
flutter_frontend/android/app/: build.gradle.kts  google-services.json
flutter_frontend/android/app/src/main/: AndroidManifest.xml
flutter_frontend/android/app/src/main/kotlin/com/example/modern_dashboard/: MainActivity.kt
flutter_frontend/android/app/src/main/res/drawable/: launch_background.xml
flutter_frontend/android/app/src/main/res/drawable-v21/: launch_background.xml
flutter_frontend/ios/Runner/: GoogleService-Info.plist  Info.plist
flutter_frontend/ios/Runner.xcodeproj/: project.pbxproj
flutter_frontend/ios/Runner/Base.lproj/: LaunchScreen.storyboard
flutter_frontend/lib/: firebase_options.dart  main.dart  main_debug.dart
flutter_frontend/lib/core/exceptions/: feed_validation_exception.dart  initialization_exception.dart
flutter_frontend/lib/core/models/: initialization_status.dart
flutter_frontend/lib/core/services/: backoff_strategy.dart  cors_proxy_service.dart  error_reporting_service.dart  web_compatibility_service.dart  web_performance_debugger.dart
flutter_frontend/lib/core/theme/: dark_theme.dart
flutter_frontend/lib/core/utils/: safe_json_converter.dart  timestamp_converter.dart  url_validator.dart
flutter_frontend/lib/firebase/: auth_service.dart  firebase_config_validator.dart  firebase_service.dart  migration_service.dart  remote_config_service.dart  settings_service.dart
flutter_frontend/lib/models/: rss_feed.dart  video_stream.dart  weather.dart
flutter_frontend/lib/repositories/: cloud_news_repository.dart  cloud_weather_repository.dart  firestore_todo_repository.dart  legacy_ffi_todo_repository.dart  mock_news_repository.dart  mock_todo_repository.dart  mock_weather_repository.dart  news_repository.dart  repository_provider.dart  rss_feed_repository.dart  todo_repository.dart  video_stream_repository.dart  weather_repository.dart
flutter_frontend/lib/screens/: dashboard_screen.dart  initialization_error_screen.dart  initialization_progress_screen.dart  login_screen.dart  migration_screen.dart  settings_screen.dart  splash_screen.dart
flutter_frontend/lib/services/: cpp_bridge.dart  cpp_bridge_ffi.dart  cpp_bridge_stub.dart  cpp_bridge_web.dart  ffi_bridge.dart  ffi_bridge_web.dart  mock_data_service.dart  rss_service.dart  video_stream_service.dart  weather_service.dart
flutter_frontend/lib/widgets/admin_panel/: remote_config_admin.dart
flutter_frontend/lib/widgets/common/: account_menu.dart  app_logo.dart  countdown_timer.dart  debug_info_panel.dart  error_boundary.dart  glass_card.dart  progress_button.dart
flutter_frontend/lib/widgets/dashboard/: dashboard_layout.dart
flutter_frontend/lib/widgets/mail_widget/: mail_widget.dart
flutter_frontend/lib/widgets/news_widget/: enhanced_news_widget.dart  news_widget.dart  rss_feed_management_dialog.dart
flutter_frontend/lib/widgets/stream_widget/: video_stream_management_dialog.dart  video_stream_widget.dart
flutter_frontend/lib/widgets/todo_widget/: todo_widget.dart
flutter_frontend/lib/widgets/weather_widget/: enhanced_weather_widget.dart  weather_config_dialog.dart  weather_location_dialog.dart  weather_widget.dart
flutter_frontend/linux/: CMakeLists.txt
flutter_frontend/linux/runner/: my_application.cc
flutter_frontend/macos/: Podfile
flutter_frontend/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_frontend/macos/Runner/: GoogleService-Info.plist
flutter_frontend/macos/Runner.xcodeproj/: project.pbxproj
flutter_frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
flutter_frontend/macos/Runner/Configs/: AppInfo.xcconfig  Debug.xcconfig  Release.xcconfig
flutter_frontend/test/: widget_test.dart
flutter_frontend/web/: flutter_bootstrap.js  flutter_bootstrap_debug.js  index.html  index_debug.html  manifest.json
shared/: constants.h  data_models.h  export.h  ffi_interface.h
